fix: Displaying the tabs on mobile

--- a/packages/seed-bible/seed-bible/app/main.css
+++ b/packages/seed-bible/seed-bible/app/main.css
@@ -1688,6 +1688,7 @@ button {
     width: 100%;
     z-index: 100;
     overflow-y: auto;
+    background: var(--sb-background);
   }
 
   .sb-sidebar-close-button {
